--- a/coinbench/package.json
+++ b/coinbench/package.json
@@ -22,12 +22,16 @@
   },
   "homepage": "https://github.com/nassersaazi/javascript#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
-    "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0"
   }
 }
